[package]
name = "cerebrojoder-rs"
version = "0.2.0"
authors = ["Alex Kesling <alex@kesling.co>"]
edition = "2018"

[[bin]]
name = "cj"
path = "src/main.rs"

[features]
default = ["interpreter", "walrus"]

# A simple brainfuck interpreter written in Rust requiring only std
# dependencies.
interpreter = []

# A library for (re)writing Wasm.
walrus = []

[dependencies]
walrus = "0.20.1"
